kubernetes/cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot
  labels:
    app: discord-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-bot
  template:
    metadata:
      name: discord-bot
      labels:
        app: discord-bot
    spec:
      containers:
        - name: discord-bot
          image: ghcr.io/zgamelogic/discord-bot:master
          imagePullPolicy: Always
          volumeMounts:
            - name: apns-volume
              mountPath: "/apns"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health
              port: 8085
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: apns-volume
          secret:
            secretName: apns-secret
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
